--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-streamlit
+streamlit==1.35.0
 pandas
 google-generativeai
 google-cloud-aiplatform
@@ -8,5 +8,5 @@ transformers==4.40.1
 torch
 accelerate
 supabase==1.2.0
-python-dotenv
+python-dotenv==1.0.1
 httpx==0.27.0
